Fix background error on mobile landscape

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   background-image: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
   font-size: 12px;
   font-family: 'Kumbh Sans', sans-serif;
+  height: 100vh;
 }
 
 .card>* {
@@ -19,7 +20,6 @@ body {
 main {
   display: flex;
   align-items: center;
-  /* height: 100vh; */
 }
 
 .info-col ul {
@@ -50,7 +50,6 @@ main {
 .cube-wrapper {
   margin: 0 auto;
   position: relative;
-  height: 100vh;
 }
 
 img.cube {
@@ -133,6 +132,10 @@ li.faq-item:hover h3 {
 
 /* MEDIA QUERIES */
 @media only screen and (max-width: 768px) {
+  body {
+    height: auto;
+  }
+
   .illustration, .cube, .bg-shadow {
     display: none;
   }
@@ -159,10 +162,6 @@ li.faq-item:hover h3 {
 
   .info-col h1 {
     text-align: center;
-  }
-
-  main {
-    height: auto;
   }
 
   .cube-wrapper {
